--- a/main/card.html
+++ b/main/card.html
@@ -14,7 +14,7 @@
             <nav class="nav-items">
                 <a href="index.html">Books</a>
                 <a href="visitor.html">Visitors</a>
-                <a href="#">Cards</a>
+                <a href="card.html">Cards</a>
                 <a href="statistic.html">Statistics</a>
             </nav>
         </header>
