--- a/main/statistic.html
+++ b/main/statistic.html
@@ -15,7 +15,7 @@
                 <a href="index.html">Books</a>
                 <a href="visitor.html">Visitors</a>
                 <a href="card.html">Cards</a>
-                <a href="#">Statistics</a>
+                <a href="statistic.html">Statistics</a>
             </nav>
         </header>
 
