--- a/main/index.html
+++ b/main/index.html
@@ -11,7 +11,7 @@
         <header>
             <h1 class="title title-color">LIBRARY</h1>
             <nav class="nav-items">
-                <a href="#">Books</a>
+                <a href="index.html">Books</a>
                 <a href="visitor.html">Visitors</a>
                 <a href="card.html">Cards</a>
                 <a href="statistic.html">Statistics</a>
