--- a/main/visitor.html
+++ b/main/visitor.html
@@ -13,7 +13,7 @@
             <h1 class="title title-color">LIBRARY</h1>
             <nav class="nav-items">
                 <a href="index.html">Books</a>
-                <a href="#">Visitors</a>
+                <a href="visitor.html">Visitors</a>
                 <a href="card.html">Cards</a>
                 <a href="statistic.html">Statistics</a>
             </nav>
