--- a/main/statistic.html
+++ b/main/statistic.html
@@ -70,7 +70,7 @@
                             <!-- <tr>
                                 <td>1</td>
                                 <td>Visitor</td>
-                                <td class="th-phone">Phone Number</td>
+                                <td class="td-phone">Phone Number</td>
                             </tr> -->
                         </tbody>
                     </table>
